# CSAT-Project

./: .env  .gitignore  CSAT_API.postman_collection.json  README.md  deploy.sh  inspect_db.py  nginx.conf  pyproject.toml  render.yaml  requirements.txt  run_local.bat  start_gunicorn.sh  test.db
.github/workflows/: deploy.yml
app/: auth.py  database.py  main.py  models.py  schemas.py  storage.py
app/routes/: admin.py  public.py  reports.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
scripts/: add_created_at_mysql.py  fix_schema.py  make_description_optional.py  verify_jwt.py  verify_optional_description.py  verify_report.py  view_feedback.py
